# shrimp

./: Cargo.toml  README.md
.circleci/: config.yml
src/: joypad.rs  main.rs  nes.rs
src/cartridge/: mod.rs
src/cartridge/mapper/: mapper_000.rs  mapper_001.rs  mapper_003.rs  mod.rs  nrom_000.rs
src/cpu/: addressing_mode.rs  mod.rs  register.rs
src/ppu/: mod.rs  register.rs
