[package]
name = "shrimp"
version = "0.1.0"
authors = ["Martin Asquino <martin.asquino@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[features]
debug = []

[dependencies]
sdl2 = { version = "0.34.0" }   # SDL2 bindings for Rust
gl = "0.14.0"                   # OpenGL bindings
structopt = "0.3.14"            # Parse command line argument by defining a struct.
